--- a/personal-site/package.json
+++ b/personal-site/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
+    "nextjs": "^0.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
