--- a/personal-site/package.json
+++ b/personal-site/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
