--- a/personal-site/package.json
+++ b/personal-site/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "nextjs": "^0.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
